# ace

./: .gitignore  LICENSE  README.md  pyproject.toml
ace/: _utils.py  cli.py  config.py  download_models.py  executor.py  model.py  runtime.py  searcher.py  setup.py
ace/config_files/: applications.json  hotkeys.json
examples/: recording.mkv
